feat: add header and some of main section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/icons8-cook-office-l-32.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
+  <header class="header">
+    <div class="wrapper">
+      <nav class="navigation">
+        <ul class="navigation__block">
+          <li class="navigation__list">
+            <a href="#aboutme" class="navigation__link">About me</a>
+          </li>
+          <li class="navigation__list">
+            <a href="#!" class="navigation__link">Education</a>
+          </li>
+          <li class="navigation__list">
+            <a href="#!" class="navigation__link">Skills</a>
+          </li>
+          <li class="navigation__list">
+            <a href="#!" class="navigation__link">Code</a>
+          </li>
+          <li class="navigation__list">
+            <a href="#!" class="navigation__link">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <section class="welcome">
+      <div class="wrapper">
+        <div class="maininfo">
+          <div class="photo-container">
+            <!-- <img src="./images/photo.webp" alt="childs photo" class="photo"> -->
+            <!-- <img src="./images/photo2.jpg" alt="childs photo" class="photo"> -->
+          </div>
+          <div class="maindescription">
+            <h1 class="title">IL<span class="mod-text">YA</span>'s Vi<span class="mod-text">nah</span>radau</h1>
+            <p class="about" id="aboutme">I want to learn front-end to implement and publish various recipes, especially my
+              specialty, the recipe of which I will share with you in the “code” section. <br>And in general - I bring joy.
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+  </main>
 
 </body>
+
 </html>
