--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <nav class="navigation">
         <ul class="navigation__block">
           <li class="navigation__list">
-            <a href="#aboutme" class="navigation__link">About me</a>
+            <a href="#my__about" class="navigation__link">About me</a>
           </li>
           <li class="navigation__list">
-            <a href="#!" class="navigation__link">Education</a>
+            <a href="#my__education" class="navigation__link">Education</a>
           </li>
           <li class="navigation__list">
-            <a href="#!" class="navigation__link">Skills</a>
+            <a href="#my__skills" class="navigation__link">Skills</a>
           </li>
           <li class="navigation__list">
-            <a href="#!" class="navigation__link">Code</a>
+            <a href="#my__code" class="navigation__link">Code</a>
           </li>
           <li class="navigation__list">
             <a href="#!" class="navigation__link">Contacts</a>
@@ -43,12 +43,47 @@
           </div>
           <div class="maindescription">
             <h1 class="title">IL<span class="mod-text">YA</span>'s Vi<span class="mod-text">nah</span>radau</h1>
-            <p class="about" id="aboutme">I want to learn front-end to implement and publish various recipes, especially my
-              specialty, the recipe of which I will share with you in the “code” section. <br>And in general - I bring joy.
-            </p>
+            <div class="about" id="my__about">
+              <h2 class="subtitle about__subtitle">About me</h2>
+              <p class="about__description">I want to learn front-end to implement and publish various recipes, especially my
+                specialty, the recipe of which I will share with you in the “code” section. <br>And in general - I bring joy.
+              </p>
+            </div>
           </div>
         </div>
-
+        <div class="education" id="my__education">
+          <h2 class="subtitle education__subtitle">Education</h2>
+          <p class="education__description">Gluboka State College</p>
+          <p class="education__sub_description">By profession a cook or just a cook</p>
+        </div>
+        <div class="skills" id="my__skills">
+          <h2 class="subtitle skills__subtitle">Skills</h2>
+          <p class="skills__description">I'm great at making pilaf</p>
+        </div>
+        <div class="code" id="my__code">
+          <h2 class="subtitle code__subtitle">Code</h2>
+          <code class="code__description">function recipeTranslater() { <br>
+            &nbsp &nbsp const pilafRecipeRu=' <br>
+            &nbsp &nbsp Берём сначала укропу, <br>
+            &nbsp &nbsp Потом кошачью тропу, <br>
+            &nbsp &nbsp 25 картошек, <br>
+            &nbsp &nbsp 17 мандовошек, <br>
+            &nbsp &nbsp Ведро воды и хмель туды, <br>
+            &nbsp &nbsp Охапку дров — и плов готов! <br>
+            &nbsp &nbsp' <br>
+            &nbsp &nbsp const pilafRecipeEng=' <br>
+            &nbsp &nbsp Take first the dill, <br>
+            &nbsp &nbsp Then the cat trail, <br>
+            &nbsp &nbsp 25 potatoes, <br>
+            &nbsp &nbsp 17 mandovos, <br>
+            &nbsp &nbsp A bucket of water and hops in there, <br>
+            &nbsp &nbsp An armful of firewood - and the pilaf is ready! <br>
+            &nbsp &nbsp' <br>
+            &nbsp &nbsp return pilatfRecipeEng <br>
+          } <br>
+          recipeTranslater();
+          </code>
+        </div>
       </div>
     </section>
   </main>
