--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <a href="#my__code" class="navigation__link">Code</a>
           </li>
           <li class="navigation__list">
-            <a href="#!" class="navigation__link">Contacts</a>
+            <a href="#my__contacts" class="navigation__link">Contacts</a>
+          </li>
+          <li class="navigation__list">
+            <a href="#my__projects" class="navigation__link">Projects</a>
           </li>
         </ul>
       </nav>
@@ -58,7 +61,8 @@
         </div>
         <div class="skills" id="my__skills">
           <h2 class="subtitle skills__subtitle">Skills</h2>
-          <p class="skills__description">I'm great at making pilaf</p>
+          <p class="skills__description">I'm great at making pilaf<br>
+          English level: B1</p>
         </div>
         <div class="code" id="my__code">
           <h2 class="subtitle code__subtitle">Code</h2>
@@ -84,10 +88,32 @@
           recipeTranslater();
           </code>
         </div>
+        <div class="contacts" id="my__contacts">
+          <h2 class="subtitle contacts__subtitle">Contacts</h2>
+          <p class="contacts__discord">Discord: D15ND</p>
+          <a href="https://t.me/pilatfrecipe" target="_blank" class="contacts__telegram">Telegram link</a>
+          <a href="tel:+375294455533" class="contacts__mobile">+375294455533</a>
+        </div>
+        <div class="projects" id="my__projects">
+          <h2 class="subtitle projects__subtitle">Projects</h2>
+          <a href="https://github.com/D15ND/my-projects/blob/main/README.md" target="_blank" class="projects__link">Link to github readme list with projects</a>
+        </div>
       </div>
     </section>
   </main>
-
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="footer__info">
+        <a href="https://github.com/d15nd" target="_blank" class="github">
+          <img src="./images/github-mark.svg" alt="github" class="github-img">
+        </a>
+        <p class="footer__year">2025</p>
+        <a href="https://rs.school/courses/javascript-preschool-ru" target="_blank" class="footer__rss">
+          <img src="./images/rs-school-logo.svg" alt="RS-SCHOOL" class="rs-img">
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
