feat: add song button and js solution for relize this button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           </div>
           <div class="maindescription">
             <h1 class="title">IL<span class="mod-text">YA</span>'s Vi<span class="mod-text">nah</span>radau</h1>
+            <a class="playBtn" id="playBtn" href="#!">Play</a>
+            <audio class="cook__audio" id="cook__audio" src="./images/audio.mp3"></audio>
             <div class="about" id="my__about">
               <h2 class="subtitle about__subtitle">About me</h2>
               <p class="about__description">I want to learn front-end to implement and publish various recipes, especially my
@@ -114,6 +116,7 @@
       </div>
     </div>
   </footer>
+  <script src="./index.js"></script>
 </body>
 
 </html>
