fix: white-space rules for validator & add title for page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./images/icons8-cook-office-l-32.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Mr COOKER</title>
 </head>
 
 <body>
@@ -69,23 +69,23 @@
         <div class="code" id="my__code">
           <h2 class="subtitle code__subtitle">Code</h2>
           <code class="code__description">function recipeTranslater() { <br>
-            &nbsp &nbsp const pilafRecipeRu=' <br>
-            &nbsp &nbsp Берём сначала укропу, <br>
-            &nbsp &nbsp Потом кошачью тропу, <br>
-            &nbsp &nbsp 25 картошек, <br>
-            &nbsp &nbsp 17 мандовошек, <br>
-            &nbsp &nbsp Ведро воды и хмель туды, <br>
-            &nbsp &nbsp Охапку дров — и плов готов! <br>
-            &nbsp &nbsp' <br>
-            &nbsp &nbsp const pilafRecipeEng=' <br>
-            &nbsp &nbsp Take first the dill, <br>
-            &nbsp &nbsp Then the cat trail, <br>
-            &nbsp &nbsp 25 potatoes, <br>
-            &nbsp &nbsp 17 mandovos, <br>
-            &nbsp &nbsp A bucket of water and hops in there, <br>
-            &nbsp &nbsp An armful of firewood - and the pilaf is ready! <br>
-            &nbsp &nbsp' <br>
-            &nbsp &nbsp return pilatfRecipeEng <br>
+            &nbsp;&nbsp; const pilafRecipeRu=' <br>
+            &nbsp;&nbsp; Берём сначала укропу, <br>
+            &nbsp;&nbsp; Потом кошачью тропу, <br>
+            &nbsp;&nbsp; 25 картошек, <br>
+            &nbsp;&nbsp; 17 мандовошек, <br>
+            &nbsp;&nbsp; Ведро воды и хмель туды, <br>
+            &nbsp;&nbsp; Охапку дров — и плов готов! <br>
+            &nbsp;&nbsp;' <br>
+            &nbsp;&nbsp; const pilafRecipeEng=' <br>
+            &nbsp;&nbsp; Take first the dill, <br>
+            &nbsp;&nbsp; Then the cat trail, <br>
+            &nbsp;&nbsp; 25 potatoes, <br>
+            &nbsp;&nbsp; 17 mandovos, <br>
+            &nbsp;&nbsp; A bucket of water and hops in there, <br>
+            &nbsp;&nbsp; An armful of firewood - and the pilaf is ready! <br>
+            &nbsp;&nbsp;' <br>
+            &nbsp;&nbsp; return pilatfRecipeEng <br>
           } <br>
           recipeTranslater();
           </code>
