fix: changed desine line to blocks and fixed plessure zone in links

--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
         </div>
         <div class="contacts" id="my__contacts">
           <h2 class="subtitle contacts__subtitle">Contacts</h2>
-          <p class="contacts__discord">Discord: D15ND</p>
-          <a href="https://t.me/pilatfrecipe" target="_blank" class="contacts__telegram">Telegram link</a>
-          <a href="tel:+375294455533" class="contacts__mobile">+375294455533</a>
+          <div class="contacts__list">
+            <p class="contacts__discord">Discord: D15ND</p>
+            <a href="https://t.me/pilatfrecipe" target="_blank" class="contacts__telegram">Telegram link</a>
+            <a href="tel:+375294455533" class="contacts__mobile">+375294455533</a>
+          </div>
         </div>
         <div class="projects" id="my__projects">
           <h2 class="subtitle projects__subtitle">Projects</h2>
