fix: white-spaces to code item for more readable

--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
         <div class="code" id="my__code">
           <h2 class="subtitle code__subtitle">Code</h2>
           <code class="code__description">function recipeTranslater() { <br>
-            &nbsp;&nbsp; const pilafRecipeRu=' <br>
-            &nbsp;&nbsp; Берём сначала укропу, <br>
-            &nbsp;&nbsp; Потом кошачью тропу, <br>
-            &nbsp;&nbsp; 25 картошек, <br>
-            &nbsp;&nbsp; 17 мандовошек, <br>
-            &nbsp;&nbsp; Ведро воды и хмель туды, <br>
-            &nbsp;&nbsp; Охапку дров — и плов готов! <br>
-            &nbsp;&nbsp;' <br>
-            &nbsp;&nbsp; const pilafRecipeEng=' <br>
-            &nbsp;&nbsp; Take first the dill, <br>
-            &nbsp;&nbsp; Then the cat trail, <br>
-            &nbsp;&nbsp; 25 potatoes, <br>
-            &nbsp;&nbsp; 17 mandovos, <br>
-            &nbsp;&nbsp; A bucket of water and hops in there, <br>
-            &nbsp;&nbsp; An armful of firewood - and the pilaf is ready! <br>
-            &nbsp;&nbsp;' <br>
+            &nbsp;&nbsp; const pilafRecipeRu = " <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Берём сначала укропу, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Потом кошачью тропу, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25 картошек, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 17 мандовошек, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ведро воды и хмель туды, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Охапку дров — и плов готов! <br>
+            &nbsp;&nbsp;" <br>
+            &nbsp;&nbsp; const pilafRecipeEng = " <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Take first the dill, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Then the cat trail, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 25 potatoes, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 17 mandovos, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A bucket of water and hops in there, <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; An armful of firewood - and the pilaf is ready! <br>
+            &nbsp;&nbsp;" <br>
             &nbsp;&nbsp; return pilatfRecipeEng <br>
           } <br>
           recipeTranslater();
