feat: add other soluton for implementing picture behavior & fix: delete commented lines

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     <section class="welcome">
       <div class="wrapper">
         <div class="maininfo">
-          <div class="photo-container">
-            <!-- <img src="./images/photo.webp" alt="childs photo" class="photo"> -->
+          <div class="photo-container" id="photo-container">
             <!-- <img src="./images/photo2.jpg" alt="childs photo" class="photo"> -->
           </div>
           <div class="maindescription">
